# conformeo-v3

./: .gitignore  AGENTS.md  PROMPT_MASTER.md  PROMPT_TASK_TEMPLATE.md  memo.txt  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  bootstrap_admin.py  main.py
apps/api/app/api/: __init__.py  dependencies.py
apps/api/app/core/: __init__.py  access.py  audit.py  billing.py  billing_export_pdf.py  building_safety.py  config.py  duerp.py  regulation.py  regulatory_evidence.py  regulatory_export_pdf.py  security.py  worksite_coordination.py  worksite_documents.py  worksite_export_pdf.py  worksites.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/schemas/: __init__.py  audit_log.py  auth.py  billing_customer.py  building_safety.py  cockpit.py  common.py  document.py  (+11 more)
apps/api/migrations/: 0001_sprint0_core.sql  0002_sprint0_multi_org.sql  0003_sprint0_auth_rbac_modules.sql  0004_sprint0_audit_log.sql  0005_sprint0_documents.sql  0006_sprint2_regulation_foundation.sql  0007_sprint2_building_safety_v1.sql  0008_sprint2_duerp_simplified.sql  0009_sprint2_regulatory_questionnaire.sql  0010_sprint3_billing_foundation.sql  0011_sprint3_billing_status_payment_numbering.sql  0012_sprint3_billing_pdf_worksite_link.sql  0013_sprint3_billing_follow_up_status.sql  0014_sprint5_worksite_document_lifecycle_status.sql  0015_sprint5_worksite_document_signature_link.sql  0016_sprint5_worksite_document_proof_links.sql  0017_sprint7_worksite_coordination.sql  0018_sprint8_worksite_document_content.sql
(+115 files in other folders)
